# ADIN2111

./: .dockerignore  .gitattributes  .gitignore  ADIN2111_SINGLE_INTERFACE_REQUIREMENTS.md  ATOMIC_BUG_FIX_REPORT.md  ATOMIC_CONTEXT_FIX.md  CHANGELOG.md  CI_CD_100_PERCENT_SUCCESS.md  CI_CD_FINAL_STATUS.md  CI_CD_OPTIMIZATION_REPORT.md  CI_CD_PIPELINE_REPORT.md  CI_CD_REMEDIATION_RESULTS.md  CI_CD_SUCCESS_REPORT.md  COMPILATION_FIX.md  CONTRIBUTING.md  DRIVER_COMPARISON_REPORT.md  DRIVER_FILES.md  DRIVER_FILES_GUIDE.md  FINAL_STATUS_REPORT.md  GITHUB_ISSUE_DRIVER_ENHANCEMENT.md  HYBRID_DRIVER_TEST_REPORT.md  HYBRID_IMPLEMENTATION_PLAN.md  HYBRID_IMPLEMENTATION_SUMMARY.md  INTEGRATION_REPORT.md  INTERMEDIATE_STATUS_REPORT.md  ISSUE-1-STATUS.md  ISSUE-11-AUDIT.md  ISSUE-11-IMPLEMENTATION-COMPLETE.md  KERNEL_6.6_FIX.md  KERNEL_INTEGRATION_STATUS.md  KERNEL_PANIC_FIX_SUMMARY.md  LICENSE  Makefile  Makefile.correct  NEXT_STEPS.md  PROJECT_ENVIRONMENT.md  QA_FINAL_VALIDATION_REPORT.md  QEMU_BUILD_PROGRESS.md  QEMU_DEVICE_FIX.md  QEMU_HYBRID_TEST_PLAN.md  (+87 more)
analysis/: checkpatch-adin2111.txt  checkpatch-mdio.txt  checkpatch-netdev.txt  checkpatch-results.txt  checkpatch-spi.txt  cppcheck-results.xml  phase2-summary.md  static_analysis.sh
arm-rootfs/: init  test-network.sh
artifacts/: test-info.txt
build-test/: test_integration  test_integration.c
docker/: Dockerfile.kernel-test  Dockerfile.qemu-ci  Dockerfile.qemu-test  Dockerfile.unified  build-qemu.sh  docker-qemu-full-test.sh  docker-qemu-kernel-test.sh  (+4 more)
qemu/hw/net/: Kconfig  adin2111.c  adin2111_hybrid.c  meson.build
(+267 files in other folders)
